--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "iview",
+    "name": "iview-update",
     "version": "3.2.1",
-    "title": "iView",
+    "title": "iView update",
     "description": "A high quality UI components Library with Vue.js",
     "homepage": "http://www.iviewui.com",
     "keywords": [
